# worker

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  release.yml
config/: default.toml  development.toml
doc/: architecture.md
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs  state.rs
src/api/extractors/: auth.rs  mod.rs
src/api/handlers/: auth.rs  config.rs  health.rs  id.rs  mod.rs
src/api/middleware/: auth.rs  mod.rs
src/config/: mod.rs  server.rs  storage.rs
src/domain/: config.rs  dto.rs  mod.rs  sequence.rs
src/error/: codes.rs  mod.rs
src/service/: cache.rs  formatted.rs  increment.rs  mod.rs  pattern.rs  snowflake.rs  token.rs
src/storage/: error.rs  factory.rs  mod.rs  traits.rs
src/storage/file/: config.rs  lock.rs  mod.rs  sequence.rs
static/: index.html  manage.html
static/css/: style.css
static/js/: api.js  auth.js  manage.js
tests/: api_integration.rs
